# pycodegen

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/config/: repo.json
.github/config/branch-protection/: main.json
.github/workflows/: auto-approve-and-merge.yml  build.yml  docker_image.yml  publish-to-pypi.yml
docs/: conf.py  index.rst  requirements.txt
src/pycodegen/: coder.py  example_module.py  llm.py  sc.py  tester.py  todo.py  vc.py
tests/acceptance/: test_code_change.py
tests/features/: Automatically_Increment_Version_Based_On_Change.feature  Cleanup_Branch_When_Done.feature  Close_Associated_Issue_When_Committing.feature  Create_Code_Based_on_Issue.feature  Create_Functional_Test.feature  Generate_Test_Cases_For_Issue.feature  Library_Recommender.feature  Notify_Results_of_Command_Completion.feature  Read_and_Write_Comments_for_Issue.feature  Source_Code_From_Tests.feature  Split_Issue_Open_and_Coding_Start.feature  Use_Existing_Source_Files.feature  Write_Commit_Message_Automatically.feature
tests/functional/: test_Automatically_Increment_Version_Based_On_Change.py  test_Cleanup_Branch_When_Done.py  test_Close_Associated_Issue_When_Committing.py  test_Create_Code_Based_on_Issue.py  test_Create_Functional_Test.py  test_Generate_Test_Cases_For_Issue.py  test_Library_Recommender.py  test_Read_and_Write_Comments_for_Issue.py  test_Source_Code_From_Tests.py  test_Split_Issue_Open_and_Coding_Start.py  test_Use_Existing_Source_Files.py  test_Write_Commit_Message_Automatically.py  test_code_change.py
tests/integration/: test_code_change.py  test_git.py
tests/unit/: test_coder.py  test_example_module.py  test_tester.py  test_todo.py
